codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__chat_composer__tests__empty.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› 让 Codex 处理任何事情                                                                             " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? 查看快捷键                                                                     剩余上下文 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (84, " "), (86, " "), (88, " "), (90, " "), (92, " ")]
