codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui_app_server__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"› Ask Codex to do anything                  "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"  计划模式 (shift+tab 切换模式)             " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
